# Learn-CMake

cmake-buildsystem/: README.md
cmake-buildsystem/test-binary-target/: CMakeLists.txt  lib1.cpp  lib2.cpp  main.cpp
cmake-buildsystem/test-compativle-interface-properties/: CMakeLists.txt  exe1.cpp  exe2.cpp  lib1.cpp  lib2.cpp
cmake-buildsystem/test-generator-expression/: CMakeLists.txt  exe1.cpp  lib1.cpp  shared_lib.cpp
cmake-buildsystem/test-link-library-generator-expression/: CMakeLists.txt
cmake-buildsystem/test-object-library/: CMakeLists.txt  lib.cpp  main.cpp  object1.cpp  object2.cpp
cmake-buildsystem/test-static-shared-lib/: CMakeLists.txt  lib.cpp
cmake-buildsystem/test-target-property/: CMakeLists.txt  file.h  main.cpp  source.cpp
cmake-buildsystem/test-target-property-and-keywords/: CMakeLists.txt  head.h  main.cpp  temp.cpp  temp.h
cmake-buildsystem/test-transitive/: CMakeLists.txt  archive.cpp  consumer.cpp  extras.cpp  serialization.cpp
cmake-buildsystem/test-transitive/image/: logic-flow-chart.drawio
cmake-commands/: outline.md
cmake-commands/demo/: CMakeLists.txt
cmake-compile-features/: outline.md
cmake-compile-features/compiler-feature/: CMakeLists.txt
